<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="0.95"
            android:layout_gravity="center"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.8">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_weight="0.02">

                <TextView
                    android:id="@+id/warning_text_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:text="@string/warnings"/>

                <TextView
                    android:id="@+id/warning_count_text_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:layout_weight="0.5" />

                </LinearLayout>

                <Button
                    android:id="@+id/view_items_button"
                    android:text="@string/view_items"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.05"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.01" />


                <Button
                    android:id="@+id/add_item_button"
                    android:text="@string/add_item"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.05"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.01" />

                <Button
                    android:id="@+id/update_item_button"
                    android:text="@string/update_item"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.05"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.01" />

                <Button
                    android:id="@+id/delete_item_button"
                    android:text="@string/delete_item"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.05"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.01" />

                <Button
                    android:id="@+id/view_reports_button"
                    android:text="@string/view_reports"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.05"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.01" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" >
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>